# krusty

./: .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.Docker.md  README.md  compose.yaml  nginx.conf.example
backend/: Cargo.toml  Dockerfile  build.rs
backend/migrations/: 20241203215730_create_user.up.sql  20241212162810_init_users.up.sql  20241217130028_init_users.up.sql  20241223204150_init_users.up.sql
backend/src/: actor.rs  key.rs  lib.rs  link.rs  login.rs  logout.rs  main.rs  register.rs  user.rs  users.rs  webfinger.rs
backend/src/ap/: activity.rs  actor.rs  mod.rs  object.rs
backend/src/back/: login.rs  logout.rs  mod.rs  post.rs  register.rs  user.rs  users.rs
backend/src/well_known/: host_meta.rs  mod.rs  webfinger.rs
frontend/: Cargo.toml  Dockerfile  Trunk.toml  build.rs  index.html  nginx.conf  styles.css  tailwind.config.js
frontend/src/: footer.rs  header.rs  home.rs  lib.rs  login.rs  main.rs  main_area.rs  register.rs
shared/: Cargo.toml
shared/src/: activity.rs  actor.rs  key.rs  lib.rs  object.rs  user.rs
static/: index.js
templates/: index.html.tera
