[package]
name = "krusty"
version = "0.1.0"
authors = ["Marcel Keienborg <marcel@keienb.org>"]
edition = "2021"
license = "MIT OR Apache-2.0"
#default-run = "backend/src/main"

[[bin]]
name = "krusty"
path = "backend/src/main.rs"

[workspace]
members = [
    "backend",
    "frontend",

    #Internal
    "common"
]
default-members = ["backend"]
resolver = "2"