[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
anyhow = "1.0.93"
argon2 = "0.5.3"
openssl = "0.10.68"
password-hash = "0.5.0"
serde = "1.0.215"
shared = { version = "0.1.0", path = "../shared" }
sqlx = { version = "0.8.2", features = ["runtime-async-std", "postgres", "macros"] }
