[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-session = { version = "0.10.1", features = ["cookie-session", "redis-session-native-tls"] }
actix-web = "4.9.0"
anyhow = "1.0.93"
argon2 = "0.5.3"
async-std = "1.13.0"
openssl = "0.10.68"
password-hash = "0.5.0"
serde = "1.0.215"
shared = { version = "0.1.0", path = "../shared" }
sqlx = { version = "0.8.2", features = ["runtime-async-std", "postgres", "macros", "uuid"] }
uuid = { version = "1.11.0", features = ["v7", "fast-rng"] }
