[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-session = { version = "0.10.1", features = ["cookie-session", "redis-session-native-tls"] }
actix-web = "4.9.0"
anyhow = "1.0.95"
argon2 = "0.5.3"
async-std = "1.13.0"
awc = { version = "3.5.1", features = ["rustls", "rustls-0_23"] }
base64 = "0.22.1"
chrono = "0.4.39"
env_logger = "0.11.6"
mime = "0.3.17"
openssl = "0.10.68"
password-hash = "0.5.0"
rustls = "0.23.20"
serde = "1.0.215"
serde_json = "1.0.134"
shared = { version = "0.1.0", path = "../shared" }
sqlx = { version = "0.8.2", features = ["runtime-async-std", "postgres", "macros", "uuid"] }
uuid = { version = "1.11.0", features = ["v7", "fast-rng"] }

webpki-roots = "0.26"