[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
gloo-net = "0.6.0"
js-sys = "0.3.72"
serde = "1.0.216"
serde_json = "1.0.134"
shared = { version = "0.1.0", path = "../shared" }
wasm-bindgen-futures = "0.4.45"
web-sys = "0.3.72"
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"
